fix(calendar): hide last row in multiview calendar if date have 'hidden' part on them also add overflow hidden to the calendar

--- a/src/components/calendar/themes/calendar.base.scss
+++ b/src/components/calendar/themes/calendar.base.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     font-family: var(--ig-font-family);
     min-width: max-content;
+    overflow: hidden;
 
     font-size: sizable(var(--ig-body-2-font-size), var(--ig-body-2-font-size), var(--ig-body-1-font-size));
     font-weight: sizable(var(--ig-body-2-font-weight), var(--ig-body-2-font-weight), var(--ig-body-1-font-weight));
